--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,14 @@
 @import "tailwindcss";
-fds{
-  background-color: #ffa6003a;
-}
+
 
 .card {
-  overflow-y: scroll; /* yoki auto */
+  overflow-y: scroll;
 }
 
-/* Chrome, Safari va Edge */
 .card::-webkit-scrollbar {
   display: none;
 }
 
-/* Firefox */
 .card{
   scrollbar-width: none;
 }
